# bdd-benchmark

./: .clang-format  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  makefile  regression  regression.py
benchmarks/: .gitignore  README.md  not_a.blif
benchmarks/apply/: 000_100.zdd  100_010.zdd  README.md  empty.zdd  powerset.zdd  top.bdd  topological.bdd  x0.bdd  x0_and_x1.bdd  x0_xnor_x1.bdd  x0_xor_x1.bdd  x1.binary.bdd  x2.bdd  x255.bdd
benchmarks/cnf/: README.md  sample.cnf
benchmarks/mcnet/: 0-cycle.pnml  1-chain.pnml  1-cycle.pnml  2-cycle.pnml  3-cycle.pnml  4-cycle.pnml  README.md  complex.sbml  conflict.a.bnet  conflict.b.bnet  cubic.sbml  inhibitor.aeon  invariant.sbml  merge.pnml  merge.sbml  pyboolnet.a.aeon  pyboolnet.a.bnet  pyboolnet.a.sbml  pyboolnet.b.aeon  pyboolnet.b.bnet  pyboolnet.b.sbml  pyboolnet.c.aeon  pyboolnet.c.bnet  pyboolnet.c.sbml  scc.a.pnml  self-loop.pnml  sink-transition.pnml  spawn.a.pnml  spawn.b.pnml  spawn.pnml  split.aeon  split.bnet  split.pnml  split.sbml  unreachable.1.pnml  unreachable.2.pnml  unreachable.3.pnml  wiki.aeon  wiki.bnet  wiki.sbml
benchmarks/picotrav/: README.md  cyclic_nets.blif  false_a.blif  false_b.blif  not_b.blif
benchmarks/qbf/: README.md  example_a.dead_nodes.qcir  example_b.cleansed.qcir
benchmarks/qcir/: example_a.qcir  example_b.dead_nodes.qcir  example_b.exists.qcir  example_b.qcir
benchmarks/relprod/: README.md
benchmarks/relprod/4-cycle/: relation.bdd  states_2.bdd  states_3.bdd  states_all.bdd
benchmarks/relprod/merge/: relation.bdd  states_2.bdd  states_all.bdd
benchmarks/relprod/self-loop/: relation.bdd  states_2.bdd  states_3.bdd  states_all.bdd
benchmarks/relprod/sink-transition/: relation.bdd  states_2.bdd  states_all.bdd
benchmarks/relprod/spawn_a/: relation.bdd  states_1.bdd  states_all.bdd
grendel/: .gitignore  README.md  grendel_build.sh  grendel_gen.py  makefile
src/: CMakeLists.txt  adiar_init.cpp  adiar_pigeonhole_principle.cpp  adiar_queens.cpp  adiar_queens_sat.cpp  adiar_sat_queens.cpp  adiar_tic_tac_toe.cpp  apply.cpp  buddy_init.cpp  buddy_pigeonhole_principle.cpp  buddy_queens.cpp  buddy_queens_sat.cpp  buddy_sat_queens.cpp  buddy_tic_tac_toe.cpp  cnf.cpp  common.cpp  common.h  coom_init.cpp  coom_pigeonhole_principle.cpp  coom_queens.cpp  coom_queens_sat.cpp  coom_tic_tac_toe.cpp  expected.h  game-of-life.cpp  hamiltonian.cpp  knights_tour.cpp  knights_tour_zdd.cpp  mcnet.cpp  picotrav.cpp  pigeonhole_principle.cpp  qbf.cpp  queens.cpp  queens_bdd.cpp  queens_zdd.cpp  relprod.cpp  sat_pigeonhole_principle.cpp  sat_queens.cpp  sat_solver.h  sylvan_init.cpp  sylvan_pigeonhole_principle.cpp  (+11 more)
src/adiar/: adapter.h  apply_bdd.cpp  apply_zdd.cpp  cnf_bdd.cpp  cnf_zdd.cpp  game-of-life_bdd.cpp  game-of-life_zdd.cpp  hamiltonian_bdd.cpp  hamiltonian_zdd.cpp  knights_tour_bdd.cpp  knights_tour_zdd.cpp  mcnet_bdd.cpp  package_mgr.h  picotrav.cpp  picotrav_bdd.cpp  picotrav_zdd.cpp  qbf_bdd.cpp  queens.cpp  queens_bdd.cpp  queens_zdd.cpp  relprod_bdd.cpp  sat_pigeonhole_principle.cpp  sat_pigeonhole_principle_bdd.cpp  sat_queens.cpp  tic-tac-toe_bdd.cpp  tic-tac-toe_zdd.cpp  tic_tac_toe.cpp  tic_tac_toe_bdd.cpp  tic_tac_toe_zdd.cpp  zdd_adapter.h
src/buddy/: adapter.h  apply_bdd.cpp  cnf_bdd.cpp  game-of-life_bdd.cpp  hamiltonian_bdd.cpp  knights_tour_bdd.cpp  mcnet_bdd.cpp  package_mgr.h  picotrav.cpp  picotrav_bdd.cpp  qbf_bdd.cpp  quadratic-reorder_bdd.cpp  queens.cpp  queens_bdd.cpp  relprod_bdd.cpp  sat_pigeonhole_principle.cpp  sat_queens.cpp  tic-tac-toe_bdd.cpp  tic_tac_toe.cpp  tic_tac_toe_bdd.cpp
src/cal/: adapter.h  apply_bcdd.cpp  apply_bdd.cpp  cnf_bcdd.cpp  game-of-life_bcdd.cpp  game-of-life_bdd.cpp  hamiltonian_bcdd.cpp  hamiltonian_bdd.cpp  knights_tour_bdd.cpp  mcnet_bcdd.cpp  picotrav_bcdd.cpp  picotrav_bdd.cpp  qbf_bcdd.cpp  qbf_bdd.cpp  queens_bcdd.cpp  queens_bdd.cpp  relprod_bcdd.cpp  tic-tac-toe_bcdd.cpp  tic-tac-toe_bdd.cpp  tic_tac_toe_bdd.cpp
src/common/: CMakeLists.txt  adapter.h  array.h  chrono.cpp  chrono.h  input.cpp  input.h  json.cpp  json.h  libbdd_parser.h
src/cudd/: adapter.h  apply_bcdd.cpp  apply_bdd.cpp  apply_zdd.cpp  cnf_bcdd.cpp  cnf_bdd.cpp  cnf_zdd.cpp  game-of-life_bcdd.cpp  game-of-life_bdd.cpp  game-of-life_zdd.cpp  hamiltonian_bcdd.cpp  hamiltonian_bdd.cpp  hamiltonian_zdd.cpp  knights_tour_bdd.cpp  knights_tour_zdd.cpp  mcnet_bcdd.cpp  mcnet_bdd.cpp  package_mgr.h  picotrav.cpp  picotrav_bcdd.cpp  picotrav_bdd.cpp  picotrav_zdd.cpp  qbf_bcdd.cpp  qbf_bdd.cpp  queens.cpp  queens_bcdd.cpp  queens_bdd.cpp  queens_zdd.cpp  relprod_bcdd.cpp  relprod_bdd.cpp  sat_pigeonhole_principle.cpp  sat_pigeonhole_principle_bdd.cpp  sat_queens.cpp  sat_queens_bdd.cpp  tic-tac-toe_bcdd.cpp  tic-tac-toe_bdd.cpp  tic-tac-toe_zdd.cpp  tic_tac_toe.cpp  tic_tac_toe_bdd.cpp  tic_tac_toe_zdd.cpp  (+1 more)
src/libbdd/: adapter.h  apply_bdd.cpp  cnf_bdd.cpp  game-of-life_bdd.cpp  hamiltonian_bdd.cpp  mcnet_bdd.cpp  picotrav_bdd.cpp  qbf_bdd.cpp  queens_bdd.cpp  relprod_bdd.cpp  tic-tac-toe_bdd.cpp
src/oxidd/: adapter.h  apply_bcdd.cpp  apply_bdd.cpp  apply_zdd.cpp  cnf_bcdd.cpp  cnf_bdd.cpp  cnf_zdd.cpp  game-of-life_bcdd.cpp  game-of-life_bdd.cpp  game-of-life_zdd.cpp  hamiltonian_bcdd.cpp  hamiltonian_bdd.cpp  hamiltonian_zdd.cpp  mcnet_bcdd.cpp  mcnet_bdd.cpp  picotrav_bcdd.cpp  picotrav_bdd.cpp  picotrav_zdd.cpp  qbf_bcdd.cpp  qbf_bdd.cpp  queens_bcdd.cpp  queens_bdd.cpp  queens_zdd.cpp  relprod_bcdd.cpp  relprod_bdd.cpp  tic-tac-toe_bcdd.cpp  tic-tac-toe_bdd.cpp  tic-tac-toe_zdd.cpp
src/sylvan/: adapter.h  apply_bcdd.cpp  apply_bdd.cpp  cnf_bcdd.cpp  game-of-life_bcdd.cpp  game-of-life_bdd.cpp  hamiltonian_bcdd.cpp  hamiltonian_bdd.cpp  knights_tour_bdd.cpp  mcnet_bcdd.cpp  package_mgr.h  picotrav.cpp  picotrav_bcdd.cpp  picotrav_bdd.cpp  qbf_bcdd.cpp  qbf_bdd.cpp  queens.cpp  queens_bcdd.cpp  queens_bdd.cpp  relprod_bcdd.cpp  sat_pigeonhole_principle.cpp  sat_pigeonhole_principle_bdd.cpp  sat_queens.cpp  sat_queens_bdd.cpp  tic-tac-toe_bcdd.cpp  tic-tac-toe_bdd.cpp  tic_tac_toe.cpp  tic_tac_toe_bdd.cpp
(+12 files in other folders)
